feat: add public

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,5 +11,5 @@
         <button id="love-button">Send Love Message</button>
     </div>
 </body>
-<script src="./backend/client.js"></script>
+<script src="client.js"></script>
 </html>
