--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,5 +11,7 @@
         <button id="love-button">Send Love Message</button>
     </div>
 </body>
+<!-- Include the Socket.IO client library -->
+<script src="/socket.io/socket.io.js"></script>
 <script src="client.js"></script>
 </html>
