--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love Message</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Signal Sender</title>
 </head>
 <body>
-    <div class="container">
-        <button id="love-button">Send Love Message</button>
-    </div>
+    <button id="sendSignal">Send Signal</button>
+    <script src="client.js"></script>
 </body>
-<!-- Include the Socket.IO client library -->
-<script src="/socket.io/socket.io.js"></script>
-<script src="client.js"></script>
 </html>
