--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Signal Sender</title>
+    <title>Love Sender</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="sendSignal">Send Signal</button>
+    <div>
+        <button id="sendSignal">Send Signal</button>
+        <div id="message"></div>
+    </div>
     <script src="client.js"></script>
 </body>
 </html>
